working on ie6 fix
git-svn-id: svn://svn.debian.org/svn/tux4kids/tux4kids-web@1261 47d30e19-490b-0410-9d18-e851f4e465b3

--- a/htdocs/css/layout.css
+++ b/htdocs/css/layout.css
@@ -21,7 +21,7 @@
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	height: 125px;
+	height: 50px;
 	background:url('../images/t4header.png') repeat-x;
 	background-color: #D3D3D3;
 	color: #000;
